@@ -12,6 +12,7 @@ import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 
@@ -70,11 +71,11 @@ public class TestUtil {
         .build();
 
 
-
+    @SuppressWarnings("java:S6204")
     public static final StoredDocument STORED_DOCUMENT = StoredDocument.builder().id(RANDOM_UUID)
         .documentContentVersions(
             Stream.of(DOCUMENT_CONTENT_VERSION)
-                .toList()
+                .collect(Collectors.toList())
         ).build();
 
     public static final StoredDocument DELETED_DOCUMENT = StoredDocument.builder()
